# FileManager

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  FileManager.cpp  FileManager.hpp  README.md  Utils.hpp  fm.ps1  main.cpp
include/: FileManager.hpp  Ui.hpp  Utils.hpp
src/: FileManager.cpp  Ui.cpp
